Fixed spacing of source list items.

--- a/app/stylesheets/styles.sass
+++ b/app/stylesheets/styles.sass
@@ -346,17 +346,18 @@ header
 
   ul#sources  
     margin-top: -15px
-    +column-count(2)
     li           
-      padding: 25px
-      padding-left: 0px
+      padding: 1%
+      margin: 1%
+      float: left
+      width: 46%
       border-bottom: 1px solid rgba(0,0,0,.15)
-
+      height: 32px 
+      
       img
-        float: left
         margin-right: 15px
         height: 32px
-        margin-top: -8px
+        vertical-align: middle
 
   ul#pandora_stations
     li
